# cookiecutter-python-project

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_slug.replace('_', '-')}}/: .gitignore  Dockerfile  entrypoint.py  pyproject.toml
{{cookiecutter.project_slug.replace('_', '-')}}/{{cookiecutter.project_slug}}/: util.py
{{cookiecutter.project_slug.replace('_', '-')}}/{{cookiecutter.project_slug}}/logging_configs/: default_config.yaml
